Fixed z-index of navbar.

--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -11,6 +11,7 @@
   position: fixed;
   right: 2%;
   top: 3%;
+  z-index: 2;
 }
 
 .nav.active {
